<?xml version="1.0" encoding="utf-8"?>
<!--Design the VIBGYOR screen using linear layout -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.mrityunjay.androidassignment31.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:background="@color/colorRed"
        android:text="@string/text_red" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:background="@color/colorOrange"
        android:text="@string/text_orange" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:background="@color/colorYellow"
        android:text="@string/text_green" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:background="@color/colorGreen"
        android:text="@string/text_green" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:background="@color/colorBlue"
        android:text="@string/text_blue" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:background="@color/colorIndigo"
        android:text="@string/text_indigo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:textAlignment="center"
        android:gravity="center_vertical"
        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
        android:background="@color/colorViolet"
        android:text="@string/text_violet" />









</LinearLayout>
